Fixed alignment of information the application form view.

--- a/media/com_emundus/css/emundus_files.css
+++ b/media/com_emundus/css/emundus_files.css
@@ -1944,3 +1944,7 @@ footer#g-footer {
     padding: 10px;
     color: white;
 }
+
+.em-personalDetail-table-inline tr td {
+    width: 50%;
+}
